--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,3 +20,12 @@ jobs:
 
       - name: Run go tests
         run: go test -cover ./...
+
+
+  style:
+    name: Style
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Format check
+        run: test -z $(go fmt ./...)
